--- a/responsive-site.html
+++ b/responsive-site.html
@@ -15,7 +15,7 @@
     </div>    
     <!-- Navigation -->
     <div class="navbar">
-        <a href="#">About me</a>
+        <a href="/responsive-site.html">About me</a>
         <a href="#">Gallery</a>
         <a href="#">Designs</a>
         <a href="#">Contact</a>
